changing resume html file

--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Prog 109 Rylan Mendoza</title>
+</head>
+<body>
+   <h1>Rylan Mendoza</h1> 
+   <ul>
+    <li>1231 Potiser, Bagel, WA 94383</li>
+    <li>Phone:  234-464-2145</li>
+    <li>E-mail:  <a href="https://www.bellevuecollege.edu">rylan@rylanmendoza.com</a></li>
+    <li>Web:  <a href="https://www.bellevuecollege.edu">Rylan-Boy.com (Unofficial)</a></li>
+  </ul>
+  <br>
 
+  <hr>
+  
+  <h2>Application</h2>
+  <p>To apply for a role as an assistant mechanic for this company that requires
+  <br>extensive knowledge of automobiles and experience in working with various vechicles
+  <br>mostly from Japanese manufacturers.
+  <br>
+  <h2>Current Skills</h2>
+  
+  <ul>
+    <li>Knowledge on repairing cars and various parts of them</li>
+    <li>Able to identify various models of cars, mainly of Japanese make</li>
+    <li>Capable of communicating with a team of others</li>
+  </ul>
+  <br>
+
+  <hr>
+
+  <h2>Experience</h2>
+  <h3>Mechanical classes</h3>
+  <ul>
+    <li>Long-time student: July 20,2015</li>
+    <li>Attended multiple class that required teamwork and knowledge to understand
+    <br>the inner workings of various machines with hands on experience</br></li>
+  </ul>
+  <br>
+
+  <hr>
+
+  <h2>Education</h2>
+  <h3>Mechanical and in progress IT degrees</h3>
+  <h4>Bellevue College, Bellevue WA</h4>
+  <ul></ul>
+      <li>Average 3.2 GPA</li>
+      <li>Listed average scores</li>
+  </ul>
+
+  <br>
+  <br>
+
+</body>
+</html>
