--- a/week04-day01.html
+++ b/week04-day01.html
@@ -12,5 +12,14 @@
     
     <p>Look at this</p>
 
+    <h2>More info.</h2>
+
+    <p>This is more info</p>
+
+    <h2 class="red-heading">Yet more info.</h2>
+
+    <p>This is yet more info</p>
+
+
 </body>
 </html>
