changing more files

--- a/week04-day01.html
+++ b/week04-day01.html
@@ -20,6 +20,14 @@
 
     <p>This is yet more info</p>
 
+    <h2 class="red-heading">Red Heading</h2>
+
+    <p class="blue-text">This is yet more info but with red heading</p>
+
+    <h2 id="new-font">Red Heading</h2>
+
+    <p class="blue-text">This is yet more info but with red heading</p>
+
 
 </body>
 </html>
