--- a/week04-day01.html
+++ b/week04-day01.html
@@ -24,7 +24,7 @@
 
     <p class="blue-text">This is yet more info but with red heading</p>
 
-    <h2 id="new-font">Red Heading</h2>
+    <h2 id="new-font">Red Heading II</h2>
 
     <p class="blue-text">This is yet more info but with red heading</p>
 
