--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Prog 109 Rylan Mendoza</title>
+    <link href="Hello-World.css" rel="stylesheet">
+    <link rel="shortcut icon" href="FaveIcon.png" type="image/png">
 </head>
+
+
 <body>
-   <h1>BOI</h1> 
+   <h1>Rylan Mendoza PROG109</h1> 
 
    <p>Welcome to my site</p>
 
    <a href="resume.html">Resume</a>
+
    
 </body>
 </html>
