--- a/week04-day01.html
+++ b/week04-day01.html
@@ -8,25 +8,25 @@
     <link rel="stylesheet" href="hello-world.css">
 </head>
 <body>
-    <h1>Got bored with this mf page</h1>
+    <h1>The headline of this page is RED</h1>
     
     <p>Look at this</p>
 
-    <h2>More info.</h2>
+    <h2>Ha you looked</h2>
 
     <p>This is more info</p>
 
-    <h2 class="red-heading">Yet more info.</h2>
+    <h2 class="red-heading">You looked again :)</h2>
 
     <p>This is yet more info</p>
 
-    <h2 class="red-heading">Red Heading</h2>
+    <h2 class="red-heading">Of course there's more info.</h2>
 
-    <p class="blue-text">This is yet more info but with red heading</p>
+    <p class="blue-text">This is yet more info but with a RED heading</p>
 
     <h2 id="new-font">Red Heading II</h2>
 
-    <p class="blue-text">This is yet more info but with red heading</p>
+    <p class="blue-text">But not really...</p>
 
 
 </body>
