--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Prog 109 Rylan Mendoza</title>
-    <link href="Hello-World.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
     <link rel="shortcut icon" href="FaveIcon.png" type="image/png">
 </head>
 
 
 <body>
-   <h1>Rylan Mendoza PROG109</h1> 
-
-   <p>Welcome to my site</p>
-
-   <a href="resume.html">Resume</a>
+    <header>
+        <h1>Rylan Mendoza PROG109</h1>
+        <p>Currently an amatuer at programming</p>
+    </header>
+   
+    <main>
+        <h2>Assignments Section</h2>
+        <p>Welcome to my site</p>
+        <ul>
+            <li><a href="In class learn images.html">In class learn images</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="week03-day02.html">week03-day02</a></li>
+    </main>
+    
 
    
 </body>
