--- a/assignments/week03-day02.html
+++ b/assignments/week03-day02.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Week Four Day 01</title>
-    <link rel="stylesheet" href="hello-world.css">
+    <link href=styles/style.css rel="stylesheet" href="hello-world.css">
 </head>
 <body>
     <h1>The headline of this page is RED</h1>
