--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <h2>Assignments Section</h2>
         <p>Welcome to my site</p>
         <ul>
-            <li><a href="In class learn images.html">In class learn images</a></li>
+            <li><a href="assignments/In class learn images.html">In class learn images</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="week03-day02.html">week03-day02</a></li>
+            <li><a href="assignments/week03-day02.html">Week03-day02</a></li>
         </ul>
 
     <figure>
