Changes once more

--- a/assignments/In class learn images.html
+++ b/assignments/In class learn images.html
@@ -17,23 +17,23 @@
     <h2>Grand Cafe de Lyon</h2>
     <img title="Night Cafe" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Grand_Cafe_de_Lyon_-_Nice_-_panoramio.jpg/1024px-Grand_Cafe_de_Lyon_-_Nice_-_panoramio.jpg" alt="Night-life">
     <br>
-    <a href="https://commons.wikimedia.org/wiki/File:Grand_Cafe_de_Lyon_-_Nice_-_panoramio.jpg">Link to image from WikiMedia</a>
+    Link to image from <a href="https://commons.wikimedia.org/wiki/File:Grand_Cafe_de_Lyon_-_Nice_-_panoramio.jpg">WikiMedia</a>
     <br>
-    <a href="https://web.archive.org/web/20161101044925/http://www.panoramio.com/user/7158?with_photo_id=113311435">Image created by Kajikawa</a>
+    Image created by <a href="https://web.archive.org/web/20161101044925/http://www.panoramio.com/user/7158?with_photo_id=113311435">Kajikawa</a>
     <h2>Dowloaded Image</h2>
 
-    <img title="Grand Cafe" src="Night City.jpg" alt="Image">
+    <img title="Grand Cafe" src="../Night City.jpg" alt="Image">
 
     <h2>Brixton Market</h2>
     <img title="Market Place" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Brixton_market_%282946889821%29.jpg/1024px-Brixton_market_%282946889821%29.jpg" alt="Brixton">
     <br>
-    <a href="https://commons.wikimedia.org/wiki/File:Brixton_market_(2946889821).jpg">Link to image from WikiMedia</a>
+    Link to image from <a href="https://commons.wikimedia.org/wiki/File:Brixton_market_(2946889821).jpg">WikiMedia</a>
     <br>
-    <a href="https://www.flickr.com/people/79653482@N00">Image created by Christian Bortes</a>
+    Image created by <a href="https://www.flickr.com/people/79653482@N00">Christian Bortes</a>
 
     <h2>Dowloaded Image</h2>
 
-    <img title="Brixton Market" src="Market.jpg" alt="Image">
+    <img title="Brixton Market" src="../Market.jpg" alt="Image">
 
 </body>
 </html>
