--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <ul>
             <li><a href="assignments/In class learn images.html">In class learn images</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="assignments/week03-day02.html">Week03-day02</a></li>
+            <li><a href="assignments/week04-day01.html">Week04-day01</a></li>
+            <li><a href="assignments/download-images.html">Downloaded-images</a></li>
         </ul>
 
     <figure>
