New webpage assignment

--- a/theme/index.html
+++ b/theme/index.html
@@ -4,39 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Prog 109 Rylan Mendoza</title>
-    <link href="styles/style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="FaveIcon.png" type="image/png">
+    <title>Cars</title>
 </head>
-
-
 <body>
-    <header>
-        <h1>Rylan Mendoza PROG109</h1>
-        <p>Currently an amatuer at programming</p>
-    </header>
-   
-    <main>
-        <h2>Assignments Section</h2>
-        <p>Welcome to my site</p>
-        <ul>
-            <li><a href="assignments/In class learn images.html">In class learn images</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="assignments/week04-day01.html">Week04-day01</a></li>
-            <li><a href="assignments/download-images.html">Downloaded-images</a></li>
-        </ul>
-
-    <figure>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Icon_Information.svg">
-        <figcaption>Image info is needed here.</figcaption>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    </figure>
-    </main>
     
-
-    <footer>
-        <p>Copyright &copy; 2019 by Rylan Mendoza</p>
-    </footer>
-   
 </body>
 </html>
