changes and images

--- a/assignments/download-images.html
+++ b/assignments/download-images.html
@@ -13,7 +13,7 @@
 
     <main>
         <img src="../images/utah-440520_640.jpg" alt="mountain sunset">
-        <img src="../images/tree-736885_640.jpg" alt="tree">
+        <img src="../theme/japan-2014618_640.jpg" alt="downtown">
 
         Original images come from <a href="https://pixabay.com/">Pixabay.com</a>
     </main>
