--- a/theme/index.html
+++ b/theme/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cars</title>
+    <title>Night Life</title>
+    <link href="styles/night-life.css" rel="stylesheet"/>
 </head>
+
+
 <body>
-    
+    <header>
+        <h1>The Night Life</h1>
+        <p>The night life of the city is an entirely different environment. The lights of the city come out, leaving a beautiful place full of activity of late-night citizens. </p>
+
+        <img src="../theme/japan-2014618_640.jpg" alt="japan">
+        Image taken by <a href="https://pixabay.com/users/masashiwakui-4385858/?tab=popular">Masahi Wakui</a> at Pixabay.com
+    </header>
+
+
 </body>
 </html>
