--- a/assignments/week04-day01.html
+++ b/assignments/week04-day01.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Week Four Day 01</title>
-    <link href="../styles/style.css" rel="stylesheet" href="../styles/style.css">
+    <link href="../styles/style.css" rel="stylesheet">
 </head>
 <body>
     <h1>The headline of this page is RED</h1>
