Edited naming issues

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Assignments Section</h2>
         <p>Welcome to my site</p>
         <ul>
-            <li><a href="assignments/In class learn images.html">In class learn images</a></li>
+            <li><a href="assignments/In-class-learn-images.html">In class learn images</a></li>
             <li><a href="assignments/resume.html">Resume</a></li>
             <li><a href="assignments/week04-day01.html">Week04-day01</a></li>
             <li><a href="assignments/download-images.html">Downloaded-images</a></li>
