Final changes to files

--- a/assignments/In-class-learn-images.html
+++ b/assignments/In-class-learn-images.html
@@ -22,7 +22,7 @@
     Image created by <a href="https://web.archive.org/web/20161101044925/http://www.panoramio.com/user/7158?with_photo_id=113311435">Kajikawa</a>
     <h2>Dowloaded Image</h2>
 
-    <img title="Grand Cafe" src="../NightCity.jpg" alt="Image">
+    <img title="Grand Cafe" src="../nightcity.jpg" alt="Image">
 
     <h2>Brixton Market</h2>
     <img title="Market Place" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Brixton_market_%282946889821%29.jpg/1024px-Brixton_market_%282946889821%29.jpg" alt="Brixton">
@@ -33,7 +33,7 @@
 
     <h2>Dowloaded Image</h2>
 
-    <img title="Brixton Market" src="../Market.jpg" alt="Image">
+    <img title="Brixton Market" src="../market.jpg" alt="Image">
 
 </body>
 </html>
