--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
         <p>Currently an amatuer at programming</p>
     </header>
    
+    <nav>
+        <ul>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </nav>
+
     <main>
+        <nav>
         <h2>Assignments Section</h2>
         <p>Welcome to my site</p>
         <ul>
@@ -24,14 +31,47 @@
             <li><a href="assignments/resume.html">Resume</a></li>
             <li><a href="assignments/week04-day01.html">Week04-day01</a></li>
             <li><a href="assignments/download-images.html">Downloaded-images</a></li>
+            <li><a href="assignments/list-buttons.html">List-Buttons</a></li>
             <li><a href="theme/index.html">Theme Index</a></li>
+            <li><a href="#block1">Block 1</a></li>
+            <li><a href="#block2">Block 2</a></li>
+            <li><a href="#block3">Block 3</a></li>
         </ul>
+    </nav>
 
-    <figure>
+    <section id="block1">
+        <h2>Block 1</h2>
+        <figure class="left">
         <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Icon_Information.svg">
         <figcaption>Image info is needed here.</figcaption>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
     </figure>
+    </section>
+
+    <section id="block2">
+        <h2>Block 2</h2>
+        <figure class="left"></figur>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Icon_Information.svg">
+        <figcaption>Image info is sort of here.</figcaption>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    </figure>
+    </section>
+
+    <section id="block3">
+        <h2>Block 3</h2>
+        <figure class="left">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Icon_Information.svg">
+        <figcaption>Image info is actually not here.</figcaption>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    </figure>
+    </section>
+
+    <section id="small-block">
+        <h2>Small Block</h2>
+        <figure class="left">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b3/Icon_Information.svg">
+            <figcaption>Image info is actually not here.</figcaption>
+    </section>
     </main>
     
 
