--- a/assignments/list-buttons.html
+++ b/assignments/list-buttons.html
@@ -13,6 +13,35 @@
     </header>
 
     <main>
-        <button>Don't push my buttons!</button>
+        <button class = "btn-padding">Don't push my buttons!</button>
+
+        <aside>Margins can provide separation between 
+            HTML elements.</aside>
+
+        <h2>Button Wrap</h2>
+        <div id = "button-wrapper">
+            <button class = "btn-margin-padding">Don't push this one either!</button>
+
+        <h2>Random Text:</h2>
+        <p>Why end might ask civil again spoil. She dinner she our horses depend. Remember at children by reserved to vicinity. 
+            In affronting unreserved delightful simplicity ye. 
+            Law own advantage furniture continual sweetness bed agreeable perpetual. 
+            Oh song well four only head busy it. Afford son she had lively living. 
+            Tastes lovers myself too formal season our valley boy. Lived it their their walls might to by young. </p>
+
+        <img src="../theme/buildings-1851246_640.jpg" alt="downtown">
+       
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
+            standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a 
+            type specimen book. 
+            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
+            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        
+        <p>We diminution preference thoroughly if. Joy deal pain view much her time. Led young gay would now state. 
+            Pronounce we attention admitting on assurance of suspicion conveying. That his west quit had met till. 
+            Of advantage he attending household at do perceived. 
+            Middleton in objection discovery as agreeable. Edward thrown dining so he my around to. </p>
+        </div>
     </main>
 </html>
