a whole lot of changes

--- a/theme/index.html
+++ b/theme/index.html
@@ -4,20 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Night Life</title>
-    <link href="styles/night-life.css" rel="stylesheet"/>
+    <title>The Automobile</title>
+    <link href="../styles/style.css" rel="stylesheet"/>
 </head>
 
 
 <body>
     <header>
-        <h1>The Night Life</h1>
-        <p>The night life of the city is an entirely different environment. The lights of the city come out, leaving a beautiful place full of activity of late-night citizens. </p>
+        <h1>AutoMobiles</h1>
+        <p>The invention of the automobile is no doubt one of the most important inventions that man has ever created.
+            Typically reffered to as a car, the car is a useful machine used to transport people and get people to their destinations.
+            cars come in all sorts of different shapes and sizes with each model having their own history and quirks and features that
+            seperate themselves from each other. Each car is unique in their own way which is what I want to show to you. 
+        </p>
 
-        <img src="../theme/japan-2014618_640.jpg" alt="japan">
-        Image taken by <a href="https://pixabay.com/users/masashiwakui-4385858/?tab=popular">Masahi Wakui</a> at Pixabay.com
+        <img class="center-img" src="../theme/buildings-1851246_640.jpg" alt="porsche"/>
+        <p>Image taken by <a href="https://pixabay.com/users/pexels-2286921/">Pexels</a> at Pixabay.com</p>
     </header>
 
+    <main>
+            <nav>
+            <h2>Individual Models</h2>
+            <p>Click on the links to learn about what cars I like and why!</p>
+            <ul>
+                <li><a href="porsche911.html">Porsche 911</a></li>
+                <li><a href="bmwm3.html">BMW M3</a></li>
+                <li><a href="nissanfairlady.html">Nissan Fairlady Z</a></li>
+                <li><a href="subaruimpreza.html">Subaru Impreza</a></li>
+                <li><a href="fordmustang.html">Ford Mustang</a></li>
+            </ul>
+        </nav>
+
+    <footer>
+        <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+    </footer>
 
 </body>
 </html>
