--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     </nav>
 
     <main>
-        <img title="portrait" src="../images/IMG_1046.jpg">
+        <img title="portrait" src="./images/IMG_1046.jpg">
         <p>Prior to taking this class, I had taken another programming class back in high school and another one last
             semester. However, I admit that despite taking those classes, my knowledge of programming is still fairly
             limited with concepts still being very confusing to me. The only programming language I have experience with
