--- a/theme/fordmustang.html
+++ b/theme/fordmustang.html
@@ -14,8 +14,11 @@
         <h1>Ford Mustang</h1>
     </header>
 
+    <figure>
     <img class = "center-img" src="../theme/34971593884_893dcf2692_c.jpg" alt = "Mustang"/>
+    <figcaption class = "center-text">Classic Mustang</figcaption>
     <h2>Image taken by<a href = "https://www.flickr.com/photos/45710097@N07/"> eddiestannes1</a> at Flickr.com</h2>
+    </figure>
 
     <p>The Ford Mustang is an American car manufactured by Ford. It was originally based on the platform of the second
         generation North American Ford Falcon, a compact car.[2] The original 1962 Ford Mustang I two-seater concept car had
@@ -32,8 +35,11 @@
         most successful cars as recent recordings say that in total, over 10 million mustangs have been produced as of Augest 2018.
     </p>
 
+    <figure>
     <img class = "center-img" src="../theme/8400872558_43b50bc70c_c.jpg" alt = "Mustang Modern"/>
+    <figcaption class = "center-text">Modern Mustang</figcaption>
     <h2>Image taken by<a href = "https://www.flickr.com/photos/meyers3d/"> David Meyers</a> at Flickr.com</h2>
+    </figure>
 
     <p>The newest iteration of the Mustang is met with a lot of praise as it still holds true to its early predecessors. There is no
         doubt that the Mustang is one of the most popular cars within the U.S and even some global fans too. The mustang has been set
