--- a/theme/index.html
+++ b/theme/index.html
@@ -32,6 +32,14 @@
                 <li><a href="nissanfairlady.html">Nissan Fairlady Z</a></li>
                 <li><a href="subaruimpreza.html">Subaru Impreza</a></li>
                 <li><a href="fordmustang.html">Ford Mustang</a></li>
+                <li><a href="dodgechallenger.html">Dodge Challenger</a></li>
+            </ul>
+        </nav>
+
+        <nav>
+            <h2>About this Website</h2>
+            <ul>
+                <li><a href="why.html">Why This was Created</a></li>
             </ul>
         </nav>
 
