--- a/theme/nissanfairlady.html
+++ b/theme/nissanfairlady.html
@@ -14,8 +14,11 @@
         <h1>Nissan Fairlady Z</h1>
     </header>
 
+    <figure>
     <img class = "center-img" src = "../theme/datsun-240z-3121246_640.jpg" alt = "datsun">
+    <figcaption class="center-text">Datsun 240z</figcaption>
     <h2>Image taken by <a href = "https://pixabay.com/users/toby_parsons-4634294/">Toby Parsons</a> at Pixabay.com</h2>
+    </figure>
 
     
     <p> The Nissan Z-car is a sports car which has been manufactured by Nissan Motors Ltd, in six generations, since 1969.
@@ -39,8 +42,11 @@
         its official name in the American market was the Datsun 240z. Other models that were sold under the Datsun included the Datsun C10
         and the Datsun 620s. </p>
 
+    <figure>
     <img class = "center-img" src ="../theme/traffic-4488752_640.jpg" alt = "370z">
+    <figcaption class="center-text">Nissan 370z</figcaption>
     <h2>Image taken by <a href = "https://pixabay.com/users/cock-robin-12252435/"> Cock Robin</a> at Pixabay.com</h2>
+    </figure>
 
     <p>The Fairlady has received a drastic change ever since its mid-90s reveal. The most notable thing about it's modernization is
         its more 'bubble' kind of appearence that is very different from its early counterparts. The latest model in the Z-line, the 370z
