--- a/theme/subaruimpreza.html
+++ b/theme/subaruimpreza.html
@@ -20,8 +20,11 @@
             a car I would love to own one day. </p>
     </aside>
 
+    <figure>
     <img class = "center-img" src="../theme/16106718799_542bd6b05d_c.jpg" alt = "subaru"/>
+    <figcaption>90s Subaru WRX Sti</figcaption>
     <h2 class="center-text">Image taken by<a href = "https://www.flickr.com/photos/catch_it/">Willie Bos</a> at Flickr.com</h2>
+    </figure>
 
 
     <p>The Subaru Impreza is a compact car that has been manufactured since 1992 by
