final changes fr

--- a/theme/bmwm3.html
+++ b/theme/bmwm3.html
@@ -15,6 +15,8 @@
         <h1>BMW M3</h1>
     </header>
 
+    <main>
+
     <img class = "body-img" src="../theme/bmw-m3-2968734_640.jpg" alt = "porsche" style="float:left"/>
     <h2>Image taken by <a href = "https://pixabay.com/users/toby_parsons-4634294/">Toby Persons</a>  at Pixabay.com</h2>
 
@@ -53,6 +55,8 @@
         go for the older 1990s E30 models as those particular models were the ones I grew up liking and also because of their retro 
         appearence as I like early 90s cars the most. 
     </p>
+
+    </main>
 
     <footer>
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
