--- a/theme/dodgechallenger.html
+++ b/theme/dodgechallenger.html
@@ -14,6 +14,8 @@
         <h1>Dodge Challenger</h1>
     </header>
 
+    <main>
+
     <figure>
     <img class = "body-img" src="../theme/6325427674_e071376264_c.jpg" alt = "Challenger" style="float:right"/>
     <figcaption class = "right-text">Early Challenger</figcaption>
@@ -64,6 +66,8 @@
         car for racing. Of course, that's just me. I have no experience behind the wheel of a muscle car, but I feel like driving 
         such a powerful car like the Challenger would be a very fun experience. 
     </p>
+
+    </main>
 
 <footer>
     <p>Copyright &copy; 2019 by Rylan Mendoza</p>
