--- a/theme/porsche911.html
+++ b/theme/porsche911.html
@@ -14,6 +14,8 @@
         <h1>Porsche 911</h1>
     </header>
     
+    <main>
+
     <img class = "body-img" src="../theme/auto-3095196_640.jpg" alt = "porsche" style="float:left"/>
     <h2>Image taken by <a href = "https://pixabay.com/users/michaelgaida-652234/">Micheal Gaida</a> at Pixabay.com</h2>
 
@@ -71,6 +73,7 @@
         eventually as I grow older. It is however, just a dream that I would ever own one, a dream that one day, I would at least
         be able to drive one and enjoy the feel of driving a legendary sports car. </p>    
 
+    </main>
 
     <footer>
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
