--- a/theme/subaruimpreza.html
+++ b/theme/subaruimpreza.html
@@ -20,6 +20,8 @@
             a car I would love to own one day. </p>
     </aside>
 
+    <main>
+
     <figure>
     <img class = "center-img" src="../theme/16106718799_542bd6b05d_c.jpg" alt = "subaru"/>
     <figcaption>90s Subaru WRX Sti</figcaption>
@@ -75,6 +77,8 @@
     <p> My lifelong goal after completing college is to own an 05 WRX like the one my family had when I was a kid. I always loved 
         Subaru's in general but the WRX in particular is a car I will never forget. I hope one day I can own one, as I believe it is
         one of the coolest and most memorable cars out there. In my opinion, a Subaru is a car that can do basically anything. </p>
+
+    </main>
     
 
 <footer>
