--- a/theme/fordmustang.html
+++ b/theme/fordmustang.html
@@ -14,6 +14,8 @@
         <h1>Ford Mustang</h1>
     </header>
 
+    <main>
+
     <figure>
     <img class = "center-img" src="../theme/34971593884_893dcf2692_c.jpg" alt = "Mustang"/>
     <figcaption class = "center-text">Classic Mustang</figcaption>
@@ -55,6 +57,8 @@
         opinion the "golden years" more muscle cars as they were all sleek and powerful cars. Don't get me wrong, modern muscle cars are still
         nice cars, but I would prefer the older American cars anyday. 
     </p>
+
+    </main>
 
 <footer>
     <p>Copyright &copy; 2019 by Rylan Mendoza</p>
