--- a/theme/index.html
+++ b/theme/index.html
@@ -43,6 +43,8 @@
             </ul>
         </nav>
 
+    </main>
+
     <footer>
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
     </footer>
