--- a/theme/nissanfairlady.html
+++ b/theme/nissanfairlady.html
@@ -14,6 +14,8 @@
         <h1>Nissan Fairlady Z</h1>
     </header>
 
+    <main>
+
     <figure>
     <img class = "center-img" src = "../theme/datsun-240z-3121246_640.jpg" alt = "datsun">
     <figcaption class="center-text">Datsun 240z</figcaption>
@@ -59,6 +61,8 @@
         really well. Its 3.5L V6 engine also is rather capable, as it produces at least 260 horsepower which is rather powerful at least
         for a beginner looking for a car. 
     </p>
+
+    </main>
 
     <footer>
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
