--- a/theme/why.html
+++ b/theme/why.html
@@ -15,9 +15,11 @@
         <h1>Why was this created?</h1>
     </header>
 
+    <main>
+
     <figure>
-        <img class = "body-img" src="../theme/1024px-350Z_(1)_(807205177).jpg" alt = "roads" style="float:right"/>
-        <figcaption class = "right-text">Mountain Roads</figcaption>
+        <img class = "center-img" src="../theme/1024px-350Z_(1)_(807205177).jpg" alt = "roads"/>
+        <figcaption class = "center-text">Mountain Roads</figcaption>
         <h2 class="center-text">Image taken by <a href = "https://commons.wikimedia.org/wiki/File:350Z_(1)_(807205177).jpg">MIKI Yoshihito</a> at Wikimedia</h2>
     </figure>
 
@@ -34,6 +36,12 @@
         about the history of cars with my personal experiences and opinions about each one. These series of web-pages may seem like
         amatuer work (in which isn't entirely wrong) but I'm still learning and I believe that's all that counts. 
     </p>
+
+    </main>
+
+    <footer>
+        <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+    </footer>
 
 </body>
 </html>
