--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li><a href="#block1">Block 1</a></li>
             <li><a href="#block2">Block 2</a></li>
             <li><a href="#block3">Block 3</a></li>
+            <l1><a href="./javascript-tests/looping-over-complex-types.html">Looping Over Complex Types</a></l1>
         </ul>
     </nav>
 
