--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><a href="#block3">Block 3</a></li>
             <l1><a href="./javascript-tests/looping-over-complex-types.html">Looping Over Complex Types</a></l1>
             <l1><a href="./for-loops/index.html">For-Loops</a></l1>
+            <l1><a href="./javascript-tests/function-basics.html">Function-Basics</a></l1>
         </ul>
     </nav>
 
