--- a/javascript-tests/function-basics.html
+++ b/javascript-tests/function-basics.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="./function-basics.js"></script>
-    <title>Function Basics</title>
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
+    <title>Function Basics-MendozaR</title>
+
 </head>
 <body>
     <h1>Function Basics</h1>
@@ -15,5 +17,6 @@
     <p id = "functionReturnDisplay"></p>
 
     <button id="functionCallsAction">CALL FUNCTIONS</button>
+
 </body>
 </html>
