--- a/javascript-tests/function-basics.html
+++ b/javascript-tests/function-basics.html
@@ -18,5 +18,8 @@
 
     <button id="functionCallsAction">CALL FUNCTIONS</button>
 
+    <label for="nameDisplay">Enter a name</label>
+    <input type="text" id="nameDisplay" name="nameDisplay">
+    
 </body>
 </html>
