--- a/javascript-tests/function-basics.html
+++ b/javascript-tests/function-basics.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="./function-basics.js"></script>
+    <script src="./elf-code.js"></script>
     <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <title>Function Basics-MendozaR</title>
 
@@ -20,6 +21,8 @@
 
     <label for="nameDisplay">Enter a name</label>
     <input type="text" id="nameDisplay" name="nameDisplay">
-    
+
+    <ul id="listDisplay"></ul>
+
 </body>
 </html>
