too complex for me atm

--- a/javascript-tests/function-inputs.html
+++ b/javascript-tests/function-inputs.html
@@ -12,10 +12,10 @@
     <h1>Function-Inputs</h1>
 
 <body>
-    <p>Feet to Inches<span id="feetToInchesDisplay"></span></p>
-    <p>Miles to Feet<span id="milesToFeetDisplay"></span></p>
-    <p>Area of Triangle<span id="areaOfTriangleDisplay"></span></p>
-    <p>Area of Circle<span id="areaOfCircleDisplay"></span></p>
+    <p>Feet to Inches: <span id="feetToInchesDisplay"></span></p>
+    <p>Miles to Feet: <span id="milesToFeetDisplay"></span></p>
+    <p>Area of Triangle: <span id="areaOfTriangleDisplay"></span></p>
+    <p>Area of Circle: <span id="areaOfCircleDisplay"></span></p>
 
     <div>
         <button id = "feetToInchesAction">Feet to Inches</button>
@@ -36,6 +36,8 @@
         <button id = "areaOfCircleAction">Area of Circle</button>
         <input id = "areaOfCircleInput">
     </div>
+
+    <ul id="listDisplay"></ul>
 
 </body>
 </html>
