--- a/javascript-tests/object-choices.html
+++ b/javascript-tests/object-choices.html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel = "stylesheet" href = "../styles/style.css">
-    <script src = "object-choices.js"></script>
+    <script src = "./object-choices.js"></script>
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <title>Object-Choices</title>
 </head>
 <body>
     <h1>Object-Choices</h1>
+
+    <p id = 'simpleObjectDisplay'></p>
+    <p id = 'functionObjectDisplay'></p>
+    <p id = 'customClassDisplay'></p>
+
+    <button id = 'simpleObjectDisplay'>Display Text</button>
+
 </body>
 </html>
