--- a/javascript-tests/object-choices.html
+++ b/javascript-tests/object-choices.html
@@ -12,11 +12,21 @@
 <body>
     <h1>Object-Choices</h1>
 
+    <h2>Object Literals</h2>
+    <p>This will show an example on how to use an object literal</p>
+    <button id = 'simpleObjectAction'>Simple Object</button>
     <p id = 'simpleObjectDisplay'></p>
+    
+
+    <h2>Constructor Function</h2>
+    <p>This is an example of a constructor function in use</p>
+    <button id = 'functionObjectAction'>Function Object</button>
     <p id = 'functionObjectDisplay'></p>
+    
+    <h2>Custom Class</h2>
+    <button id = 'customClassAction'>Custom Class</button>
     <p id = 'customClassDisplay'></p>
 
-    <button id = 'simpleObjectDisplay'>Display Text</button>
 
 </body>
 </html>
