--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <li><a href="assignments/list-buttons.html">List-Buttons</a></li>
             <li><a href="theme/index.html">Theme Index</a></li>
             <li><a href="./javascript-tests/looping-over-complex-types.html">Looping-Over-Complex-Types</a></li>
-            <li><a href="../javascript-tests/branching.html"> Branching-Basics</a></li>
-            <li><a href="../for-loops/index.html">For-Loops</a></li>
-            <li><a href="../javascript-tests/function-basics.html"> Function-Basics</a></li>
-            <li><a href="../javascript-tests/object-choices.html"> Object-Choices</a></li>
+            <li><a href="./javascript-tests/branching.html"> Branching-Basics</a></li>
+            <li><a href="./for-loops/index.html">For-Loops</a></li>
+            <li><a href="./javascript-tests/function-basics.html"> Function-Basics</a></li>
+            <li><a href="./javascript-tests/object-choices.html"> Object-Choices</a></li>
             <li><a href="#block1">Block 1</a></li>
             <li><a href="#block2">Block 2</a></li>
             <li><a href="#block3">Block 3</a></li>
