--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
             <li><a href="assignments/download-images.html">Downloaded-images</a></li>
             <li><a href="assignments/list-buttons.html">List-Buttons</a></li>
             <li><a href="theme/index.html">Theme Index</a></li>
-            <l1><a href="./javascript-tests/looping-over-complex-types.html">Looping-Over-Complex-Types</a></l1>
-            <l1><a href="./for-loops/index.html">For-Loops</a></l1>
-            <l1><a href="./javascript-tests/function-basics.html"> Function-Basics</a></l1>
-            <l1><a href="./javascript-tests/object-choices.html"> Object-Choices</a></l1>
+            <li><a href="./javascript-tests/looping-over-complex-types.html">Looping-Over-Complex-Types</a></li>
+            <li><a href="./for-loops/index.html">For-Loops</a></li>
+            <li><a href="./javascript-tests/function-basics.html"> Function-Basics</a></li>
+            <li><a href="./javascript-tests/object-choices.html"> Object-Choices</a></li>
+            <li><a href="./javascript-tests/javascript-arrays.html">Javascript-arrays</a></li>
             <li><a href="#block1">Block 1</a></li>
             <li><a href="#block2">Block 2</a></li>
             <li><a href="#block3">Block 3</a></li>
