--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><a href="./for-loops/index.html">For-Loops</a></li>
             <li><a href="./javascript-tests/function-basics.html"> Function-Basics</a></li>
             <li><a href="./javascript-tests/object-choices.html"> Object-Choices</a></li>
+            <li><a href="./javascript-tests/javascript-arrays.html"> Javascript-arrays</a></li>
             <li><a href="#block1">Block 1</a></li>
             <li><a href="#block2">Block 2</a></li>
             <li><a href="#block3">Block 3</a></li>
