--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a href="./javascript-tests/branching.html"> Branching-Basics</a></li>
             <li><a href="./for-loops/index.html">For-Loops</a></li>
             <li><a href="./javascript-tests/function-basics.html"> Function-Basics</a></li>
+            <li><a href="./javascript-tests/function-inputs.html"> Function-Inputs</a></li>
             <li><a href="./javascript-tests/object-choices.html"> Object-Choices</a></li>
             <li><a href="./javascript-tests/javascript-arrays.html"> Javascript-arrays</a></li>
             <li><a href="#block1">Block 1</a></li>
