--- a/javascript-tests/looping-over-complex-types.html
+++ b/javascript-tests/looping-over-complex-types.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Looping Over Complex Types</title>
     <script src='./looping-over-complex-types.js'></script>
-    <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/styles.css" rel="stylesheet">
     <link rel="shortcut icon" href="FaveIcon.png" type="image/png">
 
 </head>
