--- a/javascript-tests/branching.html
+++ b/javascript-tests/branching.html
@@ -11,5 +11,11 @@
 <body>
     <p id="simpleBranchDisplay">Nothing so far</p>
     <button id="simpleBranchAction">Show Simple Branch</button>
+
+    <footer>
+        <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
+    </footer>
+    
 </body>
 </html>
