--- a/javascript-tests/javascript-arrays.html
+++ b/javascript-tests/javascript-arrays.html
@@ -30,6 +30,7 @@
 
     <footer>
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
     </footer>
 
 
