--- a/javascript-tests/looping-over-complex-types.html
+++ b/javascript-tests/looping-over-complex-types.html
@@ -14,5 +14,11 @@
     <h1>Looping Over Complex Types</h1>
 
     <p><em>By RM</em></p>
+
+    <footer>
+        <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
+    </footer>
+    
 </body>
 </html>
