--- a/javascript-tests/function-basics.html
+++ b/javascript-tests/function-basics.html
@@ -23,5 +23,10 @@
 
     <ul id="listDisplay"></ul>
 
+    <footer>
+        <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
+    </footer>
+
 </body>
 </html>
