--- a/javascript-tests/object-choices.html
+++ b/javascript-tests/object-choices.html
@@ -28,5 +28,10 @@
     <p id = 'customClassDisplay'></p>
 
 
+    <footer>
+        <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
+    </footer>
+    
 </body>
 </html>
