--- a/javascript-tests/primitives.html
+++ b/javascript-tests/primitives.html
@@ -10,6 +10,11 @@
 
 </head>
 <body>
+
+    <footer>
+        <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
+    </footer>
     
 </body>
 </html>
