--- a/assignments/list-buttons.html
+++ b/assignments/list-buttons.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <link href="../styles/style.css" rel="stylesheet">
     <title>List-Buttons</title>
 </head>
@@ -43,5 +44,11 @@
             Of advantage he attending household at do perceived. 
             Middleton in objection discovery as agreeable. Edward thrown dining so he my around to. </p>
         </div>
+
+        <footer>
+            <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+            <p><a href="../index.html"> Home</a></p>
+        </footer>
+        
     </main>
 </html>
