--- a/assignments/resume.html
+++ b/assignments/resume.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <title>Prog 109 Rylan Mendoza</title>
 </head>
 <body>
@@ -52,6 +53,11 @@
         <li>Average 3.2 GPA</li>
         <li>Listed average scores</li>
     </ul>
+
+    <footer>
+        <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
+    </footer>
 
 </body>
 </html>
