--- a/javascript-tests/branching.html
+++ b/javascript-tests/branching.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel = "stylesheet" href = "../styles/style.css">
     <title>Branching JavaScript Rylan M.</title>
     <script src="./branching.js"></script>
     <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
@@ -16,6 +17,6 @@
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
         <p><a href="../index.html"> Home</a></p>
     </footer>
-    
+
 </body>
 </html>
