--- a/javascript-tests/function-inputs.html
+++ b/javascript-tests/function-inputs.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel = "stylesheet" href = "../styles/style.css">
     <link href="./function-inputs.css" rel="stylesheet">
     <title>Function-Inputs</title>
-
-
 </head>
-    <h1>Function-Inputs</h1>
 
 <body>
+    <h1>Function-Inputs</h1>
     <p>Feet to Inches: <span id="feetToInchesDisplay"></span></p>
     <p>Miles to Feet: <span id="milesToFeetDisplay"></span></p>
     <p>Area of Triangle: <span id="areaOfTriangleDisplay"></span></p>
