--- a/javascript-tests/looping-over-complex-types.html
+++ b/javascript-tests/looping-over-complex-types.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Looping Over Complex Types</title>
     <script src='./looping-over-complex-types.js'></script>
-    <link href="styles/styles.css" rel="stylesheet">
-    <link rel="shortcut icon" href="FaveIcon.png" type="image/png">
+    <link href="../styles/style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
 
 </head>
 <body>
@@ -19,6 +19,6 @@
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
         <p><a href="../index.html"> Home</a></p>
     </footer>
-    
+
 </body>
 </html>
