--- a/javascript-tests/primitives.html
+++ b/javascript-tests/primitives.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Primitives in Javascript</title>
+    <link rel = "stylesheet" href = "../styles/style.css">
     <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <script src="primitives.js"></script>
 
