--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="styles/style.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <title>About RM</title>
 </head>
 
@@ -41,6 +42,7 @@
 
     <footer>
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="./index.html"> Home</a></p>
     </footer>
 
 </body>
