--- a/assignments/In-class-learn-images.html
+++ b/assignments/In-class-learn-images.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="FaveIcon.png" type="image/png">
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <title>In-Class-Learn-Images</title>
 </head>
 <body>
@@ -35,5 +35,10 @@
 
     <img title="Brixton Market" src="../market.jpg" alt="Image">
 
+    <footer>
+        <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
+    </footer>
+    
 </body>
 </html>
