--- a/assignments/download-images.html
+++ b/assignments/download-images.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <title>Image Download Page</title>
 </head>
 <body>
@@ -20,7 +21,9 @@
 
     <footer>
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
     </footer>
+    
 
 </body>
 </html>
