--- a/assignments/week04-day01.html
+++ b/assignments/week04-day01.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <title>Week Four Day 01</title>
     <link href="../styles/style.css" rel="stylesheet">
 </head>
@@ -29,5 +30,10 @@
     <p class="blue-text">But not really...</p>
 
 
+    <footer>
+        <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
+    </footer>
+    
 </body>
 </html>
