--- a/for-loops/index.html
+++ b/for-loops/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="../styles/style.css" rel="stylesheet">
     <title>For-Loops Lesson Index</title>
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <script src="./index.js"></script>
 
 </head>
@@ -24,7 +25,9 @@
 
     <footer>
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
     </footer>
+    
 
 
 </body>
