--- a/javascript-tests/function-basics.html
+++ b/javascript-tests/function-basics.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="./function-basics.js"></script>
+    <link rel = "stylesheet" href = "../styles/style.css">
     <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <title>Function Basics-MendozaR</title>
 
