--- a/theme/index.html
+++ b/theme/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Automobile</title>
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <link href="../styles/style.css" rel="stylesheet"/>
 </head>
 
@@ -47,7 +48,9 @@
 
     <footer>
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../index.html"> Home</a></p>
     </footer>
+    
 
 </body>
 </html>
