--- a/theme/nissanfairlady.html
+++ b/theme/nissanfairlady.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nissan Fairlady Z</title>
+    <link rel="shortcut icon" href="../FaveIcon.png" type="image/png">
     <link href="../styles/style.css" rel="stylesheet"/>
 
 </head>
@@ -66,6 +67,7 @@
 
     <footer>
         <p>Copyright &copy; 2019 by Rylan Mendoza</p>
+        <p><a href="../theme/index.html"> Theme Home</a></p>
     </footer>
 
 </body>
